# agentbazar

./: .gitignore  README.md  next.config.js  package.json  pyproject.toml  requirements.txt  vercel.json
backend/: main.py
backend/agents/: intent.py  llm.py  workers.py
backend/api/: midnight.py  mip003.py  tasks.py
backend/masumi/: __init__.py  client.py  mock.py  provider.py  real.py
backend/models/: schemas.py
backend/tools/: billing_db.py  code_executor.py  search.py
contracts/: README.md
contracts/midnight/: reputation.compact
contracts/task_escrow/: aiken.toml  plutus.json
contracts/task_escrow/validators/: escrow.ak
frontend/: package-lock.json
frontend/pages/: _app.tsx  index.tsx  market.tsx  post.tsx
frontend/pages/task/: [id].tsx
frontend/services/: api.ts
frontend/styles/: globals.css
pages/: _app.tsx  post.tsx
scripts/: escrow_service.ts  generate_wallets.ts  package-lock.json  package.json  prove_chain.ts  test_agents.sh  test_flow.sh  tsconfig.json
styles/: globals.css
