[project]
name = "proofwork"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "starlette==0.27.0",
    "groq==0.4.2",
    "httpx==0.25.2",
    "pydantic==2.5.3",
    "python-dotenv==1.0.0",
    "anyio==3.7.1",
    "tavily-python==0.5.0",
    "pandas==2.2.0"
]


